--- a/static/templates/traders/home.html
+++ b/static/templates/traders/home.html
@@ -30,7 +30,7 @@
                     <th scope="col th-sm">User Name</th>
                     <th scope="col th-sm">Total Transactions</th>
                     <th scope="col th-sm">Date Joined</th>
-                    {% if user.is_superuser %}
+                    {% if user.is_authenticated and user.is_superuser %}
                         <th scope="col th-sm">Balance</th>
                     {% endif %}
                 </tr>
@@ -38,15 +38,22 @@
                 <tbody>
                 {% for profile in user_profiles %}
                     <tr class='clickable-row' jkjk='890' 
-                    data-custom-url="{% if user.is_authenticated and user.id == profile.id %}{% url 'dashboard' %}{% else %}{% url 'chart' trader_id=profile.id %}{% endif %}">
+                    
+                    {% if user.is_authenticated and user.id == profile.id %}
+                        custom_url = "{% url 'dashboard' %}"
+                    {% else %}
+                        custom_url = "{% url 'chart' trader_id=profile.id %}"
+                    {% endif %}
+                    
+                    >
     
                         <th scope="row">{{ forloop.counter }}</th>
                         <td>{{ profile.email |title }}</td>
                         <td>{{ profile.transactions.count}}</td>
                         <td>{{ profile.date_joined|date:'Y/m/d' }}</td>
-                        {% if current_profile.is_superprofile %}
+                        {% if user.is_authenticated and user.is_superuser %}
                         
-                            <td>${{ profile.balance}}</td>
+                            <td>${{profile.balance|floatformat:"3"}}</td>
 
                         {% endif %}
                     </tr>
