--- a/static/templates/traders/publicprofile.html
+++ b/static/templates/traders/publicprofile.html
@@ -23,10 +23,10 @@
         <div class = "fields-box">
         
             {{ dateform.as_p }}
-        
+            <button type="submit">Filter</button>
         </div>
 
-        {% comment %} <button type="submit">Apply Filters</button> {% endcomment %}
+        
         
     </form>
 </div>
