--- a/static/css/traders/dateform.css
+++ b/static/css/traders/dateform.css
@@ -9,7 +9,7 @@ div.dateform {
 div.dateform {
     display: flex;
     justify-content: flex-end;
-    color: 007bff;
+    color: #007bff;
 
 }
 
@@ -36,14 +36,21 @@ label {
     font-weight: bold;
 }
 
+input{
+    height: 3em;
+}
+
 /* Style the submit button */
 button[type="submit"] {
     background-color: #007bff;
     color: #fff;
-    padding: 10px;
+    padding: 5px;
     border: none;
     border-radius: 4px;
+
     cursor: pointer;
+    height: 3em;
+    margin-left: 1em;
 }
 
 /* Style form error messages */
